--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
                             <p class="user-upi">8346051322@yesg</p>
                         </div>
                     </div>
-                    <div class="card-footer">
-                        <i class="fa-solid fa-shield-check"></i> Verified
-                        Merchant
-                    </div>
+                   <div class="card-footer">
+    <i class="fa-solid fa-shield-halved"></i> Verified Merchant
+</div>
+
                 </div>
             </div>
         </div>
