Refactor HTML for improved readability

--- a/index.html
+++ b/index.html
@@ -3,25 +3,16 @@
     <head>
         <meta charset="UTF-8" />
         <title>UPI QR Pay</title>
-        <meta
-            name="viewport"
-            content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
-        />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
         <meta name="theme-color" content="#000000" />
         <meta name="apple-mobile-web-app-capable" content="yes" />
-        <meta
-            name="apple-mobile-web-app-status-bar-style"
-            content="black-translucent"
-        />
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/qr-code-styling@1.6.0/lib/qr-code-styling.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
 
-        <link
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-            rel="stylesheet"
-        />
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet" />
         <link rel="manifest" href="./manifest.json" />
         <link rel="stylesheet" href="style.css" />
     </head>
@@ -29,13 +20,10 @@
     <body>
         <div class="page" id="capture-area">
             <div class="top-icons" data-html2canvas-ignore>
-                <i
-                    class="fa-solid fa-download"
-                    id="install"
-                    style="display: none"
-                ></i>
-                <i class="fa-brands fa-whatsapp" onclick="shareAsImage()"></i>
-                <i class="fa-solid fa-inr" onclick="openModal()"></i>
+                <i class="fa-solid fa-download" id="install" style="display: none"></i>
+                <i class="fa-solid fa-image" id="btn-bg"></i>
+                <i class="fa-brands fa-whatsapp" id="btn-share"></i>
+                <i class="fa-solid fa-inr" id="btn-modal"></i>
             </div>
 
             <div class="center">
@@ -47,10 +35,9 @@
                             <p class="user-upi">8346051322@yesg</p>
                         </div>
                     </div>
-                   <div class="card-footer">
-    <i class="fa-solid fa-shield-halved"></i> Verified Merchant
-</div>
-
+                    <div class="card-footer">
+                        <i class="fa-solid fa-shield-halved"></i> Verified Merchant
+                    </div>
                 </div>
             </div>
         </div>
@@ -61,128 +48,13 @@
                 <input type="number" id="amount" placeholder="Enter Amount" />
                 <input type="text" id="note" placeholder="Add Note" />
                 <div class="modal-actions">
-                    <button class="btn-cancel" onclick="closeModal()">
-                        Close
-                    </button>
-                    <button class="btn-save" onclick="updateQR()">Apply</button>
+                    <button class="btn-cancel" id="btn-close">Close</button>
+                    <button class="btn-save" id="btn-apply">Apply</button>
                 </div>
             </div>
         </div>
 
-        <script>
-            const upi = "8346051322@yesg";
-            const name = "JAVED IQBAL";
-
-            const qr = new QRCodeStyling({
-                width: 280,
-                height: 280,
-                type: "svg",
-                data: `upi://pay?pa=${upi}&pn=${name}`,
-                dotsOptions: {
-                    color: "#000000",
-                    type: "dots"
-                },
-                cornersSquareOptions: {
-                    type: "extra-rounded",
-                    color: "#000000"
-                },
-                cornersDotOptions: {
-                    type: "dot",
-                    color: "#000000"
-                },
-                backgroundOptions: { color: "#ffffff" }
-            });
-
-            qr.append(document.getElementById("qr"));
-
-            function openModal() {
-                $("#modal")
-                    .fadeIn(200)
-                    .css("display", "flex")
-                    .addClass("active");
-            }
-
-            function closeModal() {
-                $("#modal").fadeOut(200, function () {
-                    $(this).removeClass("active");
-                });
-            }
-
-            $("#modal").on("click", function (e) {
-                if (e.target === this) closeModal();
-            });
-
-            $(".modal-content").on("click", function (e) {
-                e.stopPropagation();
-            });
-
-            function updateQR() {
-                const amt = $("#amount").val();
-                const note = $("#note").val();
-                qr.update({
-                    data: `upi://pay?pa=${upi}&pn=${name}${
-                        amt ? "&am=" + amt : ""
-                    }${note ? "&tn=" + note : ""}`
-                });
-                closeModal();
-            }
-
-            async function shareAsImage() {
-                const element = document.getElementById("capture-area");
-                try {
-                    const canvas = await html2canvas(element, {
-                        useCORS: true,
-                        scale: 3,
-                        backgroundColor: null,
-                        width: window.innerWidth,
-                        height: window.innerHeight
-                    });
-
-                    canvas.toBlob(async blob => {
-                        const file = new File([blob], "payment-qr.png", {
-                            type: "image/png"
-                        });
-                        if (
-                            navigator.canShare &&
-                            navigator.canShare({ files: [file] })
-                        ) {
-                            await navigator.share({
-                                files: [file],
-                                title: "UPI Payment QR"
-                            });
-                        } else {
-                            const link = document.createElement("a");
-                            link.download = "payment-qr.png";
-                            link.href = canvas.toDataURL();
-                            link.click();
-                        }
-                    });
-                } catch (error) {
-                    console.error(error);
-                }
-            }
-
-            if ("serviceWorker" in navigator) {
-                navigator.serviceWorker
-                    .register("./sw.js")
-                    .catch(err => console.log(err));
-            }
-
-            let deferredPrompt;
-            window.addEventListener("beforeinstallprompt", e => {
-                e.preventDefault();
-                deferredPrompt = e;
-                $("#install").show();
-            });
-
-            $("#install").on("click", function () {
-                $(this).hide();
-                deferredPrompt.prompt();
-                deferredPrompt.userChoice.then(() => {
-                    deferredPrompt = null;
-                });
-            });
-        </script>
+        <script src="script.js"></script>
     </body>
 </html>
 
